--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,34 @@
 			<scope>test</scope>
 		</dependency>
 
+
 <!--		10/12/2023-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>io.jsonwebtoken</groupId>-->
+<!--			<artifactId>jjwt-gson</artifactId>-->
+<!--			<version>${jsonwebtoken.version}</version>-->
+<!--			<scope>compile</scope> &lt;!&ndash; Not runtime &ndash;&gt;-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
