--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,19 @@
 <!--			<version>${jsonwebtoken.version}</version>-->
 <!--			<scope>compile</scope> &lt;!&ndash; Not runtime &ndash;&gt;-->
 <!--		</dependency>-->
+
+<!--		11/12/2023-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-devtools</artifactId>-->
+<!--			<scope>runtime</scope>-->
+<!--			<optional>true</optional>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-oauth2-client</artifactId>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
