--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port= 1222
 
 # MSSQL
-spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=monitoringdb
+spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=dbabc
 spring.datasource.username= sa
 spring.datasource.password= 12345678
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
@@ -10,5 +10,5 @@ spring.jpa.show-sql=true
 
 # JWT
 jwt.secret= mySecretKey
-jwt.secret.expireMs= 600000 
+jwt.secret.expireMs= 86400000
 jwt.secret.refrEshexpireMs = 120000
