--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-server.port= 1224
+server.port= 1222
 
 spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
+
+springdoc.api-docs.path=/my-api
+springdoc.swagger-ui.path=/docs.html
 
 # MSSQL
 spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=dbabc
