--- a/pom.xml
+++ b/pom.xml
@@ -16,15 +16,23 @@
 	<properties>
 		<java.version>11</java.version>
 		<jwt.version>0.9.1</jwt.version>
-<!--		<swagger2.version>3.0.0</swagger2.version>-->
-<!--		<swagger.ui.version>2.9.2</swagger.ui.version>-->
+		<swagger2.version>3.0.0</swagger2.version>
+		<swagger.ui.version>2.9.2</swagger.ui.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.6.9</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springdoc</groupId>-->
+<!--			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
+<!--			<version>2.2.0</version>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>org.springdoc</groupId>-->
+<!--			<artifactId>springdoc-openapi-ui</artifactId>-->
+<!--			<version>1.6.9</version>-->
+<!--		</dependency>-->
+
+
 		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
 <!--		<dependency>-->
 <!--			<groupId>io.springfox</groupId>-->
@@ -92,17 +100,17 @@
 			<version>${jwt.version}</version>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>io.springfox</groupId>-->
-<!--			<artifactId>springfox-swagger2</artifactId>-->
-<!--			<version>${swagger2.version}</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${swagger2.version}</version>
+		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>io.springfox</groupId>-->
-<!--			<artifactId>springfox-swagger-ui</artifactId>-->
-<!--			<version>${swagger.ui.version}</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${swagger.ui.version}</version>
+		</dependency>
 
 
 
