--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port= 1222
 spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
 
-springdoc.api-docs.path=/my-api
-springdoc.swagger-ui.path=/docs.html
+#springdoc.api-docs.path=/my-api
+#springdoc.swagger-ui.path=/docs.html
 
 # MSSQL
 spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=dbabc
