--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,13 @@
 			<version>${swagger.ui.version}</version>
 		</dependency>
 
+		<!-- Springfox Swagger -->
+<!--		<dependency>-->
+<!--			<groupId>io.springfox</groupId>-->
+<!--			<artifactId>springfox-boot-starter</artifactId>-->
+<!--			<version>3.0.0</version>-->
+<!--		</dependency>-->
+
 
 
 
