--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,11 @@ spring.jpa.show-sql=true
 jwt.secret= mySecretKey
 jwt.secret.expireMs= 86400000
 jwt.secret.refrEshexpireMs = 120000
+
+spring.servlet.multipart.enabled=true
+
+spring.servlet.multipart.file-size-threshold=2KB
+
+spring.servlet.multipart.max-file-size=20MB
+
+spring.servlet.multipart.max-request-size=20MB
