--- a/pom.xml
+++ b/pom.xml
@@ -188,8 +188,13 @@
 
 		<dependency>
 			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>4.1.2</version> <!-- Sesuaikan versi terbaru -->
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
-			<version>4.1.2</version>
+			<version>4.1.2</version> <!-- Sesuaikan versi terbaru -->
 		</dependency>
 
 
