--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ jwt.secret.refrEshexpireMs = 120000
 #upload.dir=./D/excel
 
 
-#spring.servlet.multipart.enabled=true
+spring.servlet.multipart.enabled=true
 
 spring.servlet.multipart.file-size-threshold=2KB
 
